# pyfutrader

./: .gitignore  README.md  order_puller.py  pyproject.toml  quote_receiver.py  requirements.txt  tick_store.py
config/: nng.toml  utils.py  zmq.toml
config/brokers/: ctp.toml  openctp.toml
datatype/: order.py  order.pyi  quote.py  quote.pyi  tick.py  tick.pyi
interface/: strategy.py
