[project]
name = "pyfutrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.1",
    "openctp-ctp>=6.7.7.0",
    "openctp-tts>=6.7.2.3",
    "polars>=1.31.0",
    "pyzmq>=27.0.0",
    "ta",
]

[tool.uv.sources]
ta = { path = "../../../../mnt/d/Dev/wheels/ta-1.1.0-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
